--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               Hello, I am<br />
               <span id="nome">João Victor Barbosa.</span><br />
               <span class="maquina-escrever">
-                Computer Science at @UEPB | AI | Competitor.
+                Computer Science at @UEPB | AI | Product Scale specialist | Entrepeneur.
               </span>
             </h2>
             <a
@@ -132,9 +132,9 @@
                 GRADUATING IN COMPUTER SCIENCE AT UEPB-CG.
               </p>
               <p class="descricao-delay">
-                I currently use Python, C, C++, Java, Javascript technologies.
-                   I study Artificial Intelligence and
-                 participate in Programming Marathons as a Competitor.
+                I currently use Python, C, C++, Java, Typescript technologies.
+                      I study Artificial Intelligence and Data Science
+                    In addition, I specialize in scale and architecture of large scale products.
               </p>
             </article>
           </section>
